Fix issue where abstract was not full width unless wrapped in a stage

--- a/src/sass/_abstract.scss
+++ b/src/sass/_abstract.scss
@@ -111,7 +111,10 @@
 .cl-abstract {
 
   position: relative;
-  margin: 0 0 2rem;
+  width: 100vw;
+  max-width: initial;
+  left: 50%;
+  margin: 0 0 2rem -50vw;
 
   * {
      box-sizing: border-box;
